# udemy-create-pracexam-by-ai

./: .env.sample  .gitignore  README.md  main_explanation.py  main_judge.py  model.py  openai_service.py  pyproject.toml
.devcontainer/: devcontainer.json
data/: ProjectManagement_Sample.csv  ProjectManagement_Sample_modified.csv
data/sample/: AZ305forJapan_1-25_judged.csv  AZ305forJapan_1-25_translated.csv  sample_output.csv
prompty/judge/: main.prompty  outputs.json
prompty/translate/: main.prompty  outputs.json
util/: model.py  openai_service.py  udemy_csv_convert.py
